--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net45" />
+  <package id="Microsoft.TestPlatform.TestHost" version="16.6.1" targetFramework="net45" />
+  <package id="MSTest.TestAdapter" version="2.1.2" targetFramework="net45" />
+  <package id="MSTest.TestFramework" version="2.1.2" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net45" />
   <package id="NUnit" version="3.11.0" targetFramework="net45" />
   <package id="NUnit3TestAdapter" version="3.16.1" targetFramework="net45" developmentDependency="true" />
   <package id="Selenium.Support" version="3.141.0" targetFramework="net45" />
