--- a/packages.config
+++ b/packages.config
@@ -1,13 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="DnsClient" version="1.0.7" targetFramework="net45" />
+  <package id="ExtentReports" version="4.0.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Razor" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net45" />
   <package id="Microsoft.TestPlatform.TestHost" version="16.6.1" targetFramework="net45" />
+  <package id="MongoDB.Bson" version="2.7.2" targetFramework="net45" />
+  <package id="MongoDB.Driver" version="2.7.2" targetFramework="net45" />
+  <package id="MongoDB.Driver.Core" version="2.7.2" targetFramework="net45" />
   <package id="MSTest.TestAdapter" version="2.1.2" targetFramework="net45" />
   <package id="MSTest.TestFramework" version="2.1.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net45" />
   <package id="NUnit" version="3.11.0" targetFramework="net45" />
   <package id="NUnit3TestAdapter" version="3.16.1" targetFramework="net45" developmentDependency="true" />
+  <package id="RazorEngine" version="3.10.0" targetFramework="net45" />
   <package id="Selenium.Support" version="3.141.0" targetFramework="net45" />
   <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net45" />
   <package id="Selenium.WebDriver.ChromeDriver" version="83.0.4103.3900" targetFramework="net45" />
+  <package id="System.Buffers" version="4.3.0" targetFramework="net45" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net45" />
 </packages>
