--- a/packages.config
+++ b/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Dapper" version="2.0.35" targetFramework="net472" />
   <package id="DnsClient" version="1.0.7" targetFramework="net45" />
   <package id="ExtentReports" version="4.0.3" targetFramework="net45" />
+  <package id="log4net" version="2.0.8" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net45" />
   <package id="Microsoft.TestPlatform.TestHost" version="16.6.1" targetFramework="net45" />
